--- a/myhomepage/src/App.css
+++ b/myhomepage/src/App.css
@@ -2147,6 +2147,18 @@ button.loading::after {
     text-align: center;
 }
 
+.radio-container {
+    width: 100%;
+    display: flex;
+    gap: 20px;
+}
+
+.radio-option {
+    margin: 0;
+    padding: 0;
+}
+
+
 @media (max-width: 768px) {
     .profile-image-container {
         width: 120px;
